apps/mylar/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar
spec:
  selector:
    matchLabels:
      app: mylar
  template:
    metadata:
      labels:
        app: mylar
    spec:
      containers:
      - image: linuxserver/mylar3:0.7.0
        imagePullPolicy: IfNotPresent
        name: mylar
        resources:
          requests:
            memory: "512M"
            cpu: "1"
          limits:
            memory: "2G"
            cpu: "2"
        ports:
        - containerPort: 8090
          protocol: TCP
        volumeMounts:
        - mountPath: /downloads
          name: downloads
        - mountPath: /comics
          name: comics
        - mountPath: /config
          name: mylar-config
      restartPolicy: Always
      volumes:
      - name: downloads
        nfs:
          server: 192.168.1.35
          path: /Media/Downloads-Bluey
      - name: comics
        nfs:
          server: 192.168.1.35
          path: /Media/Comics
      - name: mylar-config
        persistentVolumeClaim:
          claimName: mylar-config
