apps/mylar/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mylar
  name: mylar
spec:
  ports:
  - name: web
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: mylar
  type: ClusterIP
